2021-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix issue that resulted in adc hl, hl being emitted on gbz80.

2021-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/typeof.h:
	  Remove apparently unused header that has been broken for many years.
	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Flexible register handling for GETBYTE.

2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c,
	  src/z80/mappings.i:
	  Use placeholders more and add new ones. (Improves rgbds asm generation)

2021-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve register pair handling in code generation.

2021-03-11 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c,
	  src/z80/main.c:
	  Add basic support for GETBYTE iCode for all Z80 ports.

2021-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve handling of iyl and iyh in + and | for eZ80.

2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/main.c,
	  support/makebin/makebin.c:
	  Fix help texts for gbz80.

2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c: Get parameters faster on gbz80 sometimes.

2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/gbz80/setjmp.s:
	  Rewrite setjmp for gbz80.

2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/gbz80/__initrleblock.s,
	  device/lib/gbz80/crt0.s,
	  device/lib/gbz80/div.s,
	  device/lib/gbz80/memcpy.s,
	  device/lib/gbz80/mul.s,
	  device/lib/gbz80/setjmp.s:
	  Do some obvious asm improvements for gbz80's stdlib.

2021-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve handling of iy.

2021-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve handling of iy.
	* device/include/string.h,
	  device/lib/memset_explicit.c,
	  device/lib/incl.mk:
	  C23 memset_explicit.

2021-03-09 Philipp Klaus Krause <pkk AT spth.de>
